--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
 <body>
 
 <div class="question-container container">
-  <video class="local-gif" src="Reply me love.mp4" autoplay muted loop playsinline></video>
+<video class="local-gif" src="Reply me love.mp4" autoplay muted loop></video>
   <h2 class="question">Do you love me?</h2>
   <div class="button-container">
     <button class="yes-btn btn js-yes-btn">Yes</button>
     <button class="no-btn btn js-no-btn">No</button>
   </div>
-</div>
 </div>
 <div class="result-container container">
   <video class="gif-result" src="Love me.mp4" autoplay loop></video>
@@ -38,5 +37,4 @@
 <script src="script.js"></script>
 
 </body>
-
 </html>
